force-app/main/default/objects/History_Tracking__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>