force-app/main/default/objects/History_Tracking__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <externalId>true</externalId>
    <label>ObjectId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>